Add error checking hoping to fix the crash. Bug 369918: Crash Loading a Saved Search Folder [nsMsgQuickSearchDBView::OnSearchDone] r+sr=bienvenu